--- a/changedetectionio/static/styles/styles.css
+++ b/changedetectionio/static/styles/styles.css
@@ -1164,6 +1164,21 @@ footer {
   margin-right: 5px; 
   vertical-align: middle;}
 
+.watch-preview {
+  color: var(--color-last-checked);
+  font-size: 100%;
+  font-family: monospace;
+  white-space: pre-wrap;       /* Preserve line breaks and whitespace */
+  word-wrap: break-word;       /* Allow long words to wrap */
+  overflow-wrap: anywhere;     /* Even more aggressive wrapping if needed */
+  line-height: 1.5em;          /*     Adjust line spacing */
+  max-height: 6em;    /* ~5 lines high */
+  overflow-y: auto;
+  margin-top: 4px;
+  margin-bottom: 0px;
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
   .edit-form {
     padding: 0.5em;
