--- a/changedetectionio/static/styles/styles.css
+++ b/changedetectionio/static/styles/styles.css
@@ -1593,3 +1593,40 @@ ul {
   padding: 10px;
   font-size: 0.8rem;
   color: #fff; }
+
+/* custom mobile view */
+@media  only screen and (max-width: 600px) {
+  #form-quick-watch-add,
+  #watch-table-wrapper table thead,
+  #post-list-buttons,
+  .checkbox-uuid,
+  .watch-controls,
+  .status-icon,
+  .icon,
+  .icon-spread,
+  .last-checked,
+  .sticky-tab,
+  .button-tag,
+  .paused,
+  .has-error,
+  #watch-list-buttons-row {
+    display: none !important;
+  }
+
+  .watch-tag-title {
+    padding-top: 0px; 
+    padding-bottom: 2px; 
+  }
+
+/* reduce padding for top bar */
+  .pure-menu-horizontal {
+    padding: 0px; }
+
+/* reduce padding above watch list since top bar is narrower */
+  section.content {
+    padding-top: 36px; }
+
+/* make list wide */
+  .box {
+  	width: 100%;}
+}
